# iWantWidgetsNG

./: CMakeLists.txt  PCH.h  plugin.cpp  vcpkg.json
include/: IWWHooks.h
include/ImGui/: Manager.h  TestWidget.h  Widget.h
src/: IWWFunctions.cpp  IWWHooks.cpp
src/ImGui/: Manager.cpp  TestWidget.cpp  Widget.cpp
